# streamlit-profiler

./: README.md  pyproject.toml
examples/: basic.py  pyproject.toml  requirements.txt  run.bat
wfork_streamlit_profiler/: __init__.py
