[tool.poetry]
name = "wfork-streamlit-profiler"
version = "0.2.6"
description = "(fork of) Runtime profiler for Streamlit, powered by pyinstrument"
authors = ["Johannes Rieke <johannes.rieke@gmail.com>", "Wyatt S Carpenter"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wyattscarpenter/streamlit-profiler"

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.0.0"
pyinstrument = "==4.2.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
